22-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.html:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.ts:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.srevice.ts:
 Changes to the dashboard (provides details in four groups).

 * backend-django/clarin_backend/views.py: Added more information for user
 statistics.

21-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.2.1. (More detailed
 Dashboard).

 * backend-django/clarin_backend/views.py: Added a more detailed response of
 user statistics.

 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.html:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.ts:
 * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.srevice.ts:
 Changes to the dashboard (provides details in three groups).

13-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.2.0. (Supports VAST
 login).

 * clarin-angular/src/app/components/views/login-social/:
 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/app.component.ts:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/views/login/login.component.html:
 * clarin-angular/src/app/components/views/login/login.component.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/login.service.ts:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json:
 * clarin-angular/src/css/clarin-material.scss:
 * clarin-angular/src/proxy-local.conf.json:
 * clarin-angular/src/proxy.conf.json: Added support for VAST login.

 * backend-django/vast_auth2/views.py: Implemented VAST login (OAuth2).
