@@ -1,10 +1,11 @@
 {
   "name": "The Ellogon Annotation Platform",
-  "version": "3.2.1",
+  "version": "3.2.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --ssl false",
     "local": "ng serve --ssl false --proxy-config src/proxy-local.conf.json",
+    "django": "cd ../backend-django && python manage.py runserver",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
