@@ -18,9 +18,7 @@ import { DomSanitizer } from "@angular/platform-browser";
 
 @Component({
   selector: 'app-root',
-  templateUrl: './app.component.html',
-  styleUrls: ['./app.component.scss'],
-
+  template: '<router-outlet></router-outlet>',
 })
 export class AppComponent implements OnInit, AfterViewInit {
   // public title:   string = 'The Ellogon Annotation Platform';
