@@ -1,18 +1,0 @@
-@use 'sass:map';
-@use '@angular/material' as mat;
-
-@mixin theme($theme) {
-  $background: map.get($theme, background);
-  $foreground: map.get($theme, foreground);
-
-  .customizer-panel {
-    background-color: mat.get-color-from-palette($background, dialog);
-    color: mat.get-color-from-palette($foreground, text);
-  }
-
-  .customizer-panel-overlay {
-    &.opened {
-      background-color: mat.get-color-from-palette($foreground, divider);
-    }
-  }
-}
